--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,19 @@
-
+attrs==24.2.0
+black==24.8.0
+click==8.1.7
+flake8==7.1.1
+flake8-bugbear==24.8.19
+flake8-pie==0.16.0
+iniconfig==2.0.0
+isort==5.13.2
+mccabe==0.7.0
+mypy==1.11.2
+mypy-extensions==1.0.0
+packaging==24.1
+pathspec==0.12.1
+platformdirs==4.3.6
+pluggy==1.5.0
+pycodestyle==2.12.1
+pyflakes==3.2.0
+pytest==8.3.3
+typing_extensions==4.12.2
