--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 attrs==24.2.0
+autoflake==2.3.1
 black==24.8.0
 click==8.1.7
 flake8==7.1.1
 flake8-bugbear==24.8.19
 flake8-pie==0.16.0
+greenlet==3.1.1
 iniconfig==2.0.0
 isort==5.13.2
 mccabe==0.7.0
@@ -16,4 +18,5 @@ pluggy==1.5.0
 pycodestyle==2.12.1
 pyflakes==3.2.0
 pytest==8.3.3
+SQLAlchemy==2.0.35
 typing_extensions==4.12.2
