--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ click==8.1.7
 flake8==7.1.1
 flake8-bugbear==24.8.19
 flake8-pie==0.16.0
+Flake8-pyproject==1.2.3
 greenlet==3.1.1
 iniconfig==2.0.0
 isort==5.13.2
