--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aiosqlite==0.20.0
 annotated-types==0.7.0
 anyio==4.6.0
 attrs==24.2.0
@@ -31,6 +32,7 @@ pydantic==2.9.2
 pydantic_core==2.23.4
 pyflakes==3.2.0
 pytest==8.3.3
+pytest-asyncio==0.24.0
 PyYAML==6.0.2
 sniffio==1.3.1
 SQLAlchemy==2.0.35
