--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
-; asyncio_default_fixture_loop_scope = class # or any other valid scope
+;asyncio_default_fixture_loop_scope = "session" # or any other valid scope
 ; [pytest]
 asyncio_mode = auto
