--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Set PYTHONPATH
         run: |
-          echo "PYTHONPATH=$(pwd)/src:$(pwd)/tests" >> $GITHUB_ENV
+          echo "PYTHONPATH=$(pwd):$(pwd)" >> $GITHUB_ENV
       - name: Verify PYTHONPATH
         run: |
           echo "PYTHONPATH=$PYTHONPATH"
