--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,10 +20,11 @@ ignore-init-module-imports = true
 remove-duplicate-keys = true
 remove-unused-variables = true
 
-#[tool.flake8]
-#max-line-length = 88
+[tool.flake8]
+max-line-length = 120
+ignore = ['E701']
 #ignore = ['E203', 'E266', 'E501', 'W503', 'F403', 'F401', 'E701']
-##count = true
+#count = true
 #
 #[tool.black]
 #line-length = 88
