--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ flake8-bugbear==24.8.19
 flake8-pie==0.16.0
 Flake8-pyproject==1.2.3
 greenlet==3.1.1
+h11==0.14.0
 identify==2.6.1
 idna==3.10
 iniconfig==2.0.0
@@ -38,4 +39,5 @@ sniffio==1.3.1
 SQLAlchemy==2.0.35
 starlette==0.38.6
 typing_extensions==4.12.2
+uvicorn==0.31.0
 virtualenv==20.26.6
