--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ anyio==4.6.0
 attrs==24.2.0
 autoflake==2.3.1
 black==24.8.0
+certifi==2024.8.30
 cfgv==3.4.0
 click==8.1.7
 distlib==0.3.8
@@ -15,6 +16,8 @@ flake8-pie==0.16.0
 Flake8-pyproject==1.2.3
 greenlet==3.1.1
 h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.2
 identify==2.6.1
 idna==3.10
 iniconfig==2.0.0
