--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ remove-unused-variables = true
 
 [tool.flake8]
 max-line-length = 120
-ignore = ['E701']
+ignore = ['E701','B008']
 #ignore = ['E203', 'E266', 'E501', 'W503', 'F403', 'F401', 'E701']
 #count = true
 #
